cabal-version: 2.2
name: bytehash
version: 0.1.0.0
synopsis: Hash byte sequences
-- description:
homepage: https://github.com/andrewthad/bytehash
bug-reports: https://github.com/andrewthad/bytehash/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2020 Andrew Martin
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Data.Bytes.Hash
    Data.Bytes.HashMap
    Data.Bytes.HashMap.Word
  build-depends:
    , base >=4.12 && <5
    , byte-order >=0.1.2 && <0.2
    , primitive >=0.7 && <0.8
    , byteslice >=0.1.4 && <0.3
  hs-source-dirs: src
  ghc-options: -O2 -Wall
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options: -rtsopts -threaded -O2
  hs-source-dirs: test
  build-depends:
    , base >=4.12 && <5
    , bytehash
    , byteslice >=0.1.4
    , primitive >=0.6.4
    , tasty >=1.0
    , tasty-hunit >=0.9
    , tasty-hedgehog
    , hedgehog >=1.0.1
  default-language: Haskell2010
